@@ -158,12 +158,12 @@ if (!defined('PAGE_TITLE')) {
     }
 }
 ?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <HTML lang="en_US">
 <HEAD>
   <TITLE><?php echo (!PAGE_TITLE? '' : PAGE_TITLE . ' - ') . $_CONF['system_title']; ?></TITLE>
-  <META http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+  <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <META name="author" content="LOVD development team, LUMC, Netherlands">
   <META name="generator" content="gPHPEdit / GIMP @ GNU/Linux (Ubuntu)">
   <BASE href="<?php echo lovd_getInstallURL(); ?>">
